# finances-ai

./: .gitignore  AI_INTEGRATION.md  EXPORT_GUIDE.md  GET_TOKEN.md  LICENSE  LUNCH_DETECTION.md  NATURAL_QUERIES.md  PLAID_SETUP.md  PROVIDER_ARCHITECTURE.md  README.md  SETUP.md  TELLER_SETUP.md  TESTING_ANALYSIS.md  TRANSACTION_ANALYSIS.md  alembic.ini  pyproject.toml  requirements.txt
backend/: __init__.py  main.py
backend/app/: __main__.py  config.py  database.py
backend/app/ai/: __init__.py  client.py  config.py  data_selector.py  providers.py
backend/app/analytics/: __init__.py  allocation.py  expenses.py  income.py  net_worth.py  performance.py
backend/app/api/: __init__.py  cli.py  dashboard.py  export.py  rest.py
backend/app/models/: __init__.py  account.py  holding.py  net_worth.py  transaction.py
backend/app/plaid/: __init__.py  client.py  link_server.py  sync.py  test_connection.py
backend/app/providers/: __init__.py  base.py  factory.py  plaid_client.py  (+3 more)
frontend/: .gitkeep
migrations/: env.py
migrations/versions/: 491e21627439_add_comprehensive_transaction_fields_.py  5a3b549b1ff2_add_income_and_deposit_tracking_fields.py  b2e48200fa3b_add_expense_tracking_fields.py
tests/: __init__.py  conftest.py
tests/test_ai/: __init__.py  test_client.py  test_config.py  test_data_selector.py  test_providers.py
tests/test_analytics/: __init__.py  test_allocation.py  test_expenses.py  test_income.py  test_net_worth.py  test_performance.py
tests/test_queries/: __init__.py  test_handlers.py  test_intent_router.py  test_lunch_detection.py
(+4 files in other folders)
